--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -2,6 +2,12 @@
   width: 100%;
   background-color: #131921;
   height: 40px;
+
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
 }
 .footer_title {
   display: flex;
@@ -9,7 +15,7 @@
   align-items: center;
   font-size: 12px;
   color: chocolate;
-  margin: 10px;
+
   padding-top: 10px;
 }
 
