--- a/frontend/src/views/UserList.css
+++ b/frontend/src/views/UserList.css
@@ -1,4 +1,4 @@
-.user {
+.center {
   border-radius: 2px;
   box-shadow: 0 0 20px -10px #000;
   margin: calc(50vh - 220px) auto;
@@ -9,7 +9,16 @@
   position: relative;
   margin-top: 20px;
 }
+.btn {
+  border-radius: 50%;
+  border: none;
+  transition-duration: 0.5s;
+  transform: rotateX(45deg);
+  box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.3);
+}
 
-.user h3 {
-  text-align: center;
+.btn:hover {
+  cursor: pointer;
+  color: black;
+  background-color: red;
 }
